<resources>
    <string name="app_name">Streetlity</string>
    <string name="action_settings">Settings</string>
    <string name="contribute">Contribute</string>
    <string name="title_activity_service_selection">Service Selection</string>
    <string name="fix">Maintenance</string>
    <string name="atm">ATM</string>
    <string name="wc">Public Toilet</string>
    <string name="fuel">Fuel Station</string>
    <string name="location_confirmation">Help confirming a location</string>
    <string name="name">Name: </string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_contribute">Contribute To Service</string>
    <string name="title_activity_select_from_map">Select From Map</string>
    <string name="title_activity_add_maintenance">Add A Maintenance</string>
    <string name="title_activity_add_atm">Add An ATM</string>
    <string name="title_activity_bank_selection">Bank Selection</string>
    <string name="search">Search for a bank</string>
    <string name="search_atm">Search for ATMs</string>
    <string name="select_bank">Select your bank</string>
    <string name="review">Reviews:</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="email">Email</string>
    <string name="cfpassword">Confirm password</string>
    <string name="signup">Sign up</string>
    <string name="achievement">Achievements</string>
    <string name="input_bank_name">Input bank name here</string>
    <string name="go">Go</string>
    <string name="range">Range:</string>
    <string name="main_login" translatable="false">Join us</string>
    <string name="your_comment">Leave your comment here</string>
    <string name="leave_review">Leave a review</string>
    <string name="exist">Exist</string>
    <string name="non_exist">Doesn\'t exist</string>
    <string name="logout">Logout</string>
    <string name="user_info">User Info</string>
    <string name="username_info">Username:</string>
    <string name="email_info">Email:</string>
    <string name="change_password">Change Password</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="cf_new_pass">Confirm new password</string>
    <string name="change">Change</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="send">Send</string>
    <string name="OTP">OTP</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="reset_pass">Reset password</string>
    <string name="add_wc">Add public toilet</string>
    <string name="add_fuel">Add fuel station</string>
    <string name="note">Note:</string>
    <string name="phone">Phone number</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="address">Your address</string>
    <string name="signup_as_maintain" translatable="false">Sign up as Repairman</string>
    <string name="address_short">Address</string>
    <string name="phone_short">Phone</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="address_short_with">Address:</string>
    <string name="phone_short_with">Phone:</string>
    <string name="edit_profile">Edit profile</string>
    <string name="maintainer_signup">Repairman Signup</string>
    <string name="title_activity_works">Works</string>
    <string name="order">Order</string>
    <string name="name_order">Name</string>
    <string name="prefer_time" translatable="false">Prefer time</string>
    <string name="note_without">Note (optional)</string>
    <string name="alert">Alert! This will notify nearby maintenance stores about your location. ONLY USE IN CASE OF EMERGENCY</string>
    <string name="reason">Reason</string>
    <string name="broadcast">Broadcast</string>
    <string name="find_maintainer">Find a repairman</string>
    <string name="my_works">My works</string>
    <string name="normal_order">Normal orders</string>
    <string name="no_order">No order</string>
    <string name="my_order">My order</string>
    <string name="history">History</string>
    <string name="title_activity_order_info">Order Info</string>
    <string name="order_info">Order info</string>
    <string name="prefer_time_with" translatable="false">Prefer time:</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="decline_order">Decline order?</string>
    <string name="why">Why?</string>
    <string name="cancel">Cancel</string>
    <string name="find_your_store">Find your work place from the map</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="about_us">About us</string>
    <string name="login_to_app">Login into Streetlity</string>
    <string name="not_login">Not logged in</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="additional_info">Additional information</string>
    <string name="user_type">What kind of user are you?</string>
    <string name="user_common">I just want to help expanding the locations</string>
    <string name="user_owner">I\'m a repairman</string>
    <string name="user_store_state">Is your store on the map?</string>
    <string name="user_store_yes">Yes, it is already on the map</string>
    <string name="user_store_no">No, i want to add it</string>
    <string name="already_have_account">Already have account?</string>
    <string name="signup_success">Sign up successfully</string>
    <string name="signup_success_owner">Sign up successfully\nPlease wait for verification</string>
    <string name="please_select_type">Please select user type</string>
    <string name="empty_user_name">Empty username</string>
    <string name="empty_user_mail">Empty email</string>
    <string name="empty_pass">Empty password</string>
    <string name="empty_cf_pass">Empty confirm password</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="please_select_option">Please select an option</string>
    <string name="account_info">Account information</string>
    <string name="store_info">Store information</string>
    <string name="store_location">Where is your store located?</string>
    <string name="store_select">Select your store</string>
    <string name="please_select_store">Please select a store</string>
    <string name="username_short">Username too short</string>
    <string name="pass_short">Password too short</string>
    <string name="empty_address">Empty address</string>
    <string name="please_select_location">Please select a location</string>
    <string name="empty_name">Empty name</string>
    <string name="store_success">Store added successfully</string>
    <string name="atm_info">ATM information</string>
    <string name="atm_location">Where is the ATM located?</string>
    <string name="store_location_not_owner">Where is the store located?</string>
    <string name="atm_success">ATM added successfully</string>
    <string name="please_select_bank">Please select a bank</string>
    <string name="location_added">Location added</string>
    <string name="please_select_reason">Please select reason</string>
    <string name="address_not_found">Address not found</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="logged_out">Logged out</string>
    <string name="logged_in">Logged in</string>
    <string name="added_successfully">Location added successfully</string>
    <string name="Emergency_order">temp</string>
    <string name="location_confirm_activity_label">Location confirmation</string>
    <string name="select_bank_spinner">- Select a bank -</string>
    <string name="select_reason_spinner">- Select a reason -</string>
    <string name="other">Other</string>
    <string name="select_img">Select images (optional)</string>
    <string name="selected">Selected </string>
    <string name="images"> images</string>
    <string name="cant_go">Can\'t go to destination from here</string>
    <string name="error_direction">Can\'t find direction</string>
    <string name="destination">Destination</string>
    <string name="you_r_here">You are here</string>
    <string name="find_direction">Find direction</string>
    <string name="all">All</string>
    <string name="title_activity_broadcast" translatable="false">BroadcastActivity</string>
    <string name="contacted">Contacted</string>
    <string name="nearby_store">nearby stores</string>
    <string name="empty_reason">Empty reason</string>
    <string name="user_wait_approval">User is waiting for approval</string>
    <string name="user_not_exist">Invalid user</string>
    <string name="empty_comment">Empty comment</string>
    <string name="email_exist">Email existed</string>
    <string name="username_existed">Username existed</string>
    <string name="usermail_existed">Username and Email existed</string>
    <string name="no_atm">No atm nearby</string>
    <string name="no_fuel">No fuel station nearby</string>
    <string name="no_wc">No public toilet nearby</string>
    <string name="no_maintenance">No maintenance store nearby</string>
    <string name="cant_find_loca">Can\'t find location\nPlease wait\nIn case this screen doesn\'t disappear after 1 minute, please find a place where the sky is visible</string>
    <string name="location_services_off">Please turn on location service</string>
    <string name="open_settings">Open settings</string>
    <string name="no_internet">No internet</string>
    <string name="fuel_success">Fuel station added successfully</string>
    <string name="wc_success">Public toilet added successfully</string>
    <string name="underline_signup">&lt;u&gt;Sign Up&lt;/u&gt;</string>
    <string name="underline_achievement">&lt;u&gt;Achievements&lt;/u&gt;</string>
    <string name="underline_forgotpass">&lt;u&gt;Forgot password?&lt;/u&gt;</string>
    <string name="confirming_location">Confirming locations</string>
    <string name="cancel_order">Cancel order?</string>
    <string name="need_login">This feature need login</string>
    <string name="need_login_info">Please login or sign up to use this feature</string>
    <string name="or">or</string>
    <string name="broadcast_to_repair">Broadcast signal to repairmen</string>
    <string name="repairman_accept">A repairman accept your request</string>
    <string name="chat_with">Chat with him (if needed)</string>
    <string name="repair_come">Repairman comes and fixes your vehicle</string>
    <string name="mark_and_pay">Mark the job as done and pay the repair man</string>
    <string name="note_pay">Note: Price is depend on the situation</string>
    <string name="i_understand">I understand</string>
    <string name="instruction">Instruction</string>
    <string name="instruction_broadcast">Find a repairman for you by broadcasting to nearby maintenance stores</string>
    <string name="instruction_emer">Find a repairman by broadcast to nearby repairmen that have the emergency option turned on</string>
    <string name="instruction_all">Show all the nearby services from your location</string>
    <string name="instruction_fuel">Find fuel stations nearby</string>
    <string name="instruction_atm">Find ATMs nearby</string>
    <string name="instruction_wc">Find public toilets nearby</string>
    <string name="instruction_fix">Find maintenance stores nearby</string>
</resources>